# motionengine

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  docker-compose.yml  play-sources.csv  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_coach_profile_sports.py
data/: few_shot_examples.json  narrative_rules.json  sample_record.json  stat_calibration.json
docs/: ARCHITECTURE.md  COOKBOOK.md  GLOSSARY.md  RULES.md  WALKTHROUGH-practice-generate.md
docs/design/: v1-practice-features.md
eval/: build_forbidden_phrases.py  crossref-anatomy.jsonl  diagram-fidelity-v2-cases.jsonl  forbidden_phrases.json  form-coach-cases.jsonl  halftime-cases.jsonl  play-brief-cases.jsonl  practice-cases.jsonl  resolver-cases.jsonl  synth-cases.jsonl
eval/drill-diagrams-spike/: drill-1-on-0-box-dribbling.json  drill-bag-weave.json  drill-eastman-flex-elbow.json  drill-mikan-baby-hook.json  drill-s15-shell-drill.json
eval/drill-diagrams-top50/: drill-1-on-1-box-dribbling.json  drill-2v2-full-court-defense.json  drill-3on2-to-2on1-transition-s6.json  drill-400-shots-off-screen.json  drill-55-second-shooting-drill.json  drill-55-second-shooting-format.json  drill-closeout-shooting-off-dribble-series.json  drill-combo-hop-back-crossover.json  drill-control-dribble-youth.json  drill-cutting-outlet-pass-shooting.json  drill-defending-middle-pnr.json  drill-dribble-closeout-youth.json  drill-dribble-tag-s15.json  drill-eastman-chair-shooting-series.json  drill-eight-point-defensive-drill.json  drill-five-on-five-no-defense.json  drill-five-player-passing-game-fast-break.json  drill-flex-offense-screen-the-screener-drill.json  drill-flex-shooting-two-screens.json  drill-follow-leader-shooting.json  drill-follow-the-leader-shooting-workouts.json  drill-four-individual-defensive-traits.json  drill-full-court-cutting.json  drill-help-the-helper.json  drill-hesitation-dribble-s15.json  drill-jab-step-roll-rebounding.json  drill-left-to-right-v-cut.json  drill-mass-ballhandling-pivoting.json  drill-medicine-ball-lateral-shuffle-pass.json  drill-offense-transition-defense-sequence.json  drill-one-on-one-cutthroat-live.json  drill-penetration-drill.json  drill-post-moves-passing-shooting-rebounding.json  drill-post-screening-youth.json  drill-push-and-talk-defensive.json  drill-push-push-defensive.json  drill-racetrack-dribble.json  drill-rip-step-hop-back-crossover.json  drill-rip-step-hop-back-roll-out.json  drill-rip-step-stride-stop-step-through.json  (+9 more)
knowledge-base/: SCHEMA.md
knowledge-base/wiki/: 23-flare.md  32-lob.md  SCHEMA-core.md  acl-injury-prevention.md  ankle-sprain-rehabilitation.md  ankle-strengthening.md  bank-shot-drills.md  basketball-glossary-herb-brown.md  basketball-glossary-offensive-terms.md  basketball-physical-qualities-hierarchy.md  blob-4-low-flex-updated.md  blob-4-low-flex.md  blob-belmont-flash.md  blob-box-flash.md  blob-box-gate-updated.md  blob-box-gate.md  blob-cross.md  blob-double-skip.md  blob-flip-updated.md  blob-flip.md  blob-hawk.md  blob-side-cross-elevator.md  blob-stack-double-updated.md  blob-stack-double.md  blob-stack-man-spread.md  blob-stack-man.md  blob-stack-zone-variant.md  blob-stack-zone.md  blob-two-inside-updated.md  blob-two-inside.md  blob-yo-yo-updated.md  blob-yo-yo.md  (+1238 more)
lib/: game_report.py  halftime.py
pipeline/: 01_download_dataset.py  02_parse_dataset.py  03_analyze_narratives.py  04_build_calibration.py  05_curate_examples.py  09_integration_test.py  10_export_to_wiki.py  11_test_ml.py  ingest-all.sh
play-extraction-poc/: .gitignore  Makefile  README.md  requirements.txt  scratch_debug_arrows.py  scratch_debug_trace.py  scratch_zoom.py
scripts/: init-db.sql
spec/: SPORTSETT_INTEGRATION.md  architecture.md  crossref-anatomy-chain.md  karpathy-llm-wiki.md  motion-behavioral-audit.md  play-animation-pipeline.md  play-extraction-poc.md  play-viewer.md  wiki-ops-python-migration.md
(+992 files in other folders)
